styles: email edit and title edit

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- favicon -->
     <link rel="icon" type="image/png" href="img/favicon.png" />
     <!-- title -->
-    <title>qrop - Creative Personal Portfolio Template.</title>
+    <title>eddieos | U.I/U.X Designer and Developer.</title>
     <!-- =====================================
     ============   ALL CSS HERE   ============
     ====================================== -->
