styles: social links added

--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
         <div class="bottom-page">
             <ul class="social">
                 <!-- Change the # with the link to your social page. -->
-                <li><a class="facebook tooltip" href="#" title="Facebook"></a></li>
-                <li><a class="twitter tooltip" href="#" title="Twitter"></a></li>
-                <li><a class="youtube tooltip" href="#" title="YouTube"></a></li>
-                <li><a class="skype tooltip" href="#" title="Skype"></a></li>
-                <li><a class="dribbble tooltip" href="#" title="Dribbble"></a></li>
+                <li><a class="facebook tooltip" href="https://www.facebook.com/ekhoragbon.endurance" title="Facebook"></a></li>
+                <li><a class="twitter tooltip" href="https://twitter.com/eddieosuiux" title="Twitter"></a></li>
+                <li><a class="youtube tooltip" href="https://www.youtube.com/channel/UCE0xsqeOLpzazCKszsiftsA" title="YouTube"></a></li>
+                <li><a class="linkedin tooltip" href="https://www.linkedin.com/in/eddieos/" title="LinkedIn"></a></li>
+                <li><a class="dribbble tooltip" href="https://dribbble.com/eddieos" title="Dribbble"></a></li>
 
                 <!-- You can add to social list buttons for digg, delicious, vimeo and dropbox. Just delete the brackets from below -->
                 <!--	<li><a class="digg tooltip" href="#" title="Digg"></a></li>
