--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h2>Portfolio site currently under construction!</h2>
                 <div class="row"></div>
                 <div class="row"></div>
-                <h3>I am doing my best and  working hard in believe to reveal what I do:</h3>
+                <h3>I am doing my best and  working hard to reveal what I do:</h3>
 
                 <div id="countdown"></div>
                 <div class="clear"></div>
