--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 </head>
 
 <body>
-<!-- begin of preloader --
-<div class="preloader">
-    <div class="line_loader"></div>
-    <p>loading</p>
-</div>
-<div class="overlay2"></div>
-<div class="overlay"></div>
-<!-- end of preloader -->
+<!--&lt;!&ndash; begin of preloader &ndash;&gt;-->
+<!--<div class="preloader">-->
+    <!--<div class="line_loader"></div>-->
+    <!--<p>loading</p>-->
+<!--</div>-->
+<!--<div class="overlay2"></div>-->
+<!--<div class="overlay"></div>-->
+<!--&lt;!&ndash; end of preloader &ndash;&gt;-->
 
 <!-- begin of main wrapper -->
 <div id="page_top" class="qrop_main">
@@ -656,7 +656,7 @@
                     </h2>
                 </div>
                 <div class="col-md-9 wow fadeIn" data-wow-delay=".05s">
-                    <form id="contact-form" action="php/mail.php">
+                    <form id="contact-form" action="https://formspree.io/eekhoragbon@gmail.com">
                         <div class="row">
                             <div class="col-12">
                                 <p class="form-message mb-2"></p>
@@ -690,14 +690,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 col-sm-12">
-                    <p>&copy; Copyright 2019 - <a href="#" target="_blank">eddieos.me</a></p>
+                    <p>&copy; Copyright 2019 - <a href="index.html">eddieos.me</a></p>
                 </div>
                 <div class="col-md-7 col-sm-12">
                     <ul class="footer_nav">
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Twitter</a></li>
-                        <li><a href="#">Dribbble</a></li>
-                        <li><a href="#">Behance</a></li>
+                        <li><a href="https://www.facebook.com/ekhoragbon.endurance">Facebook</a></li>
+                        <li><a href="https://twitter.com/eddieosuiux">Twitter</a></li>
+                        <li><a href="https://www.instagram.com/eddieosas">Intstagram</a></li>
+                        <li><a href="https://dribbble.com/eddieos">Dribbble</a></li>
+                        <li><a href="https://www.behance.net/eddieos">Behance</a></li>
                     </ul>
                 </div>
             </div>
