styles: crusader sterling project

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="Designer, Porfolio, Developer, Desingineer, HTML/CSS Specialist, PSD to HTML">
     <meta name="author" content="eddieos">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta meta name="viewport" content="width=device-width, user-scalable=no" />
 
     <!-- favicon -->
     <link rel="icon" type="image/png" href="img/favicon-eddieos.png"/>
@@ -38,14 +39,14 @@
 </head>
 
 <body>
-<!--&lt;!&ndash; begin of preloader &ndash;&gt;-->
-<!--<div class="preloader">-->
-    <!--<div class="line_loader"></div>-->
-    <!--<p>loading</p>-->
-<!--</div>-->
-<!--<div class="overlay2"></div>-->
-<!--<div class="overlay"></div>-->
-<!--&lt;!&ndash; end of preloader &ndash;&gt;-->
+<!-- begin of preloader -->
+<div class="preloader">
+    <div class="line_loader"></div>
+    <p>loading</p>
+</div>
+<div class="overlay2"></div>
+<div class="overlay"></div>
+<!-- end of preloader -->
 
 <!-- begin of main wrapper -->
 <div id="page_top" class="qrop_main">
@@ -415,14 +416,15 @@
                         <div class="col-lg-4 col-md-6 col-sm-6 develop">
                             <div class="work_single_item">
                                 <div class="work_image">
-                                    <a class="" href="blog_single.html">
-                                        <img class="img-fluid" src="img/work_02.jpg" alt="">
+                                    <a class="" href="projects/crusader_sterling.html">
+                                        <img class="img-fluid" src="img/projects/crusader/crusader-preview.jpg" alt="">
 
                                     </a>
                                 </div>
                                 <div class="work_item_info">
-                                    <h4>Lamp Holded</h4>
-                                    <p>development</p>
+                                    <h4>Crusader Sterling <br>
+                                        Pension Mobile</h4>
+                                    <p>Research and development</p>
                                 </div>
                             </div>
                         </div>
@@ -446,12 +448,12 @@
                         <div class="col-lg-4 col-md-6 col-sm-6 develop">
                             <div class="work_single_item">
                                 <div class="work_image">
-                                    <a class="zoom_image" href="img/work_04.jpg">
-                                        <img class="img-fluid" src="img/work_04.jpg" alt="">
+                                    <a class="" href="projects/ligare_web.html">
+                                        <img class="img-fluid" src="img/projects/ligare-web/ligare-web-preview.jpg" alt="">
                                     </a>
                                 </div>
                                 <div class="work_item_info">
-                                    <h4>Blue Sky</h4>
+                                    <h4>Ligare <br>Official Website</h4>
                                     <p>development</p>
                                 </div>
                             </div>
