--- a/projects/crusader_sterling.html
+++ b/projects/crusader_sterling.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="Designer, Porfolio, Developer, Desingineer, HTML/CSS Specialist, PSD to HTML">
     <meta name="author" content="eddieos">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta meta name="viewport" content="width=device-width, user-scalable=no" />
 
     <!-- favicon -->
     <link rel="icon" type="image/png" href="../img/favicon-eddieos.png"/>
@@ -39,12 +40,12 @@
 
 <body class="project">
 <!-- begin of preloader -->
-<!--<div class="preloader">-->
-<!--<div class="line_loader"></div>-->
-<!--<p>loading project</p>-->
-<!--</div>-->
-<!--<div class="overlay2"></div>-->
-<!--<div class="overlay"></div>-->
+<div class="preloader">
+    <div class="line_loader"></div>
+    <p>loading</p>
+</div>
+<div class="overlay2"></div>
+<div class="overlay"></div>
 <!-- end of preloader -->
 
 <!-- begin of main wrapper -->
@@ -87,12 +88,12 @@
     <!-- begin of blogs wrapper -->
     <div id="qrop_blogs" class="qrop_blogs section_single_padding">
         <div class="single_blog_details">
-            <img class="blog_single_img img-fluid" src="../img/blog_single.jpg" alt="">
-            
+            <img class="blog_single_img img-fluid w-100" src="../img/projects/crusader/crusader-intro.jpg" alt="">
+
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-12 col-md-12">
-                        <h2 class="single_blog_title mb-5">Project Title</h2>
+                        <h2 class="single_blog_title mb-5">CrusaderSterling Pension Mobile Application</h2>
                         <h4 class="mt-2"><span class="mbri-file overview-icon"></span>Overview</h4>
                     </div>
                 </div>
@@ -100,51 +101,74 @@
                     <div class="col-lg-6 col-md-12">
                         <h5 class="mb-3">The Problem</h5>
                         <div class="single_blog_details mb-3">
-                            <p class="blog_text_head">Crusadersterling ipsum dolor sit amet consectetur adipisicing
-                                elit. Itaque est
-                                asperiores numquam earum maxime cum. Earum itaque quos tempora numquam, adipisci
-                                doloribus voluptatem accusamus, sit ducimus quis quibusdam eum aspernatur! consectetur
-                                adipisicing elit. Nam ipsum quis, cumque tenetur incidunt perferendis architecto. Ipsam
-                                tempora fugit quae nesciunt dignissimo.</p>
+                            <p class="blog_text_head">Crusadersterling was in need of an <strong>Hybrid Mobile
+                                Application</strong> to
+                                serve their iOS and Android customers a good pension experience. There was an existing
+                                software working on just the Android platform, so there was a need to build a new app
+                                that supports both iOS
+                            </p>
                         </div>
-                        <div class="row">
-                            <div class="col-md-6">
+                    </div>
+                    <div class="col-lg-6 col-md-12">
+                        <h5 class="mb-3">What I did</h5>
+                        <div class="single_blog_details mb-3">
+                            <p class="blog_text_head">Worked with the business and development team in visualizing how
+                                the
+                                application should best work for customers. Designed wireframes based on the user
+                                stories provided by the business team. After approved wireframes, I joined the dev team
+                                in building the interface of the mobile app using Ionic Framework. </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center mt-4">
+                    <div class="col-lg-6 col-md-12">
+                        <div class="row mb-3">
+                            <div class="col-md-3">
                                 <h5>Services</h5>
-                                <p>UI Design</p>
+                                <p>UX Design</p>
                                 <p>Mobile App Dev</p>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-3">
                                 <h5>Client</h5>
-                                <p>UI Design</p>
-                                <p>Mobile App Dev</p>
+                                <p>CrusaderSterling Pension</p>
+                            </div>
+                            <div class="col-md-6">
+                                <h5>Team Members</h5>
+                                <p>Endurance Ekhoragbon <a href="http://www.eddieos.me/" target="_blank"><span
+                                        class="mbri-link"></span></a><br>
+                                    <small>
+                                        (U.I/U.X Developer)
+                                    </small>
+                                </p>
+                                <p>Theophilus Omoregbee <a
+                                        href="https://www.linkedin.com/in/theophilus-omoregbee-4775ab53/"
+                                        target="_blank"><span class="mbri-link"></span></a><br>
+                                    <small>
+                                        (Full Stack Developer)
+                                    </small>
+                                </p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12">
-                        <h5 class="mb-3">The Solution</h5>
-                        <div class="single_blog_details mb-3">
-                            <p class="blog_text_head">Crusadersterling ipsum dolor sit amet consectetur adipisicing
-                                elit. Itaque est
-                                asperiores numquam earum maxime cum. Earum itaque quos tempora numquam, adipisci
-                                doloribus voluptatem accusamus, sit ducimus quis quibusdam eum aspernatur! consectetur
-                                adipisicing elit. Nam ipsum quis, cumque tenetur incidunt perferendis architecto. Ipsam
-                                tempora fugit quae nesciunt dignissimo.</p>
-                        </div>
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-4">
+                                <h5>Tech Stack</h5>
+                                <p>Balsamiq Wireframing, Ionic, HTML, CSS/SCSS</p>
+                            </div>
+                            <div class="col-md-4">
                                 <h5>Platform</h5>
-                                <p>Web Desktop and Mobile</p>
                                 <p>iOS Mobile</p>
                                 <p>Android Mobile</p>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-4">
                                 <h5>Status</h5>
-                                <p>In Development</p>
                                 <p>Completed</p>
                                 <p>
-                                    <a href="#" class="btn btn-success"><span class="mbri-android"></span></a>
-                                    <a href="#" class="btn btn-dark"><span class="mbri-apple"></span></a>
-                                    <a href="#" class="btn btn-info"><span class="mbri-globe"></span></a>
+                                    <a href="https://play.google.com/store/apps/details?id=com.glosskode.crusader&hl=en"
+                                       target="_blank" class="btn btn-success"><span class="mbri-android"></span></a>
+                                    <a href="https://itunes.apple.com/ng/app/crusadersterling-pension/id1331644365?mt=8"
+                                       target="_blank" class="btn btn-dark"><span class="mbri-apple"></span></a>
                                 </p>
                             </div>
                         </div>
@@ -157,17 +181,22 @@
                     <div class="col-lg-12 col-md-12 text-center">
                         <div class="mb-5">
                             <h4 class="mt-2 mb-3"><span class="mbri-image-gallery overview-icon"></span></h4>
-                            <h2 class="single_blog_title mb-3">Protoype/Visual Design/Mock Up/Wireframe</h2>
+                            <h2 class="single_blog_title mb-3">Protoype/Wireframe</h2>
                         </div>
                     </div>
 
-                    <div class="col-lg-6 col-md-6 mb-3 text-center">
+                    <div class="col-lg-6 col-md-6 mb-4 text-center">
                         <p>Created wireframe based on Client request on how the mobile application should function</p>
 
                     </div>
 
                     <div class="col-lg-12">
-                        <img class="img-fluid w-100" src="https://via.placeholder.com/150" alt="">
+                        <img class="img-fluid w-100 mb-5 mb-sm-2 mb-lg-5" src="../img/projects/crusader/Mockup1.png"
+                             alt="">
+                        <img class="img-fluid w-100 mb-5 mb-sm-2 mb-lg-5" src="../img/projects/crusader/Mockup2.png"
+                             alt="">
+                        <img class="img-fluid w-100 mb-5 mb-sm-2 mb-lg-5" src="../img/projects/crusader/Mockup3.png"
+                             alt="">
                     </div>
 
 
