--- a/projects/project_template_1.html
+++ b/projects/project_template_1.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="Designer, Porfolio, Developer, Desingineer, HTML/CSS Specialist, PSD to HTML">
     <meta name="author" content="eddieos">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta meta name="viewport" content="width=device-width, user-scalable=no" />
 
     <!-- favicon -->
     <link rel="icon" type="image/png" href="../img/favicon-eddieos.png"/>
@@ -39,12 +40,12 @@
 
 <body class="project">
 <!-- begin of preloader -->
-<!--<div class="preloader">-->
-<!--<div class="line_loader"></div>-->
-<!--<p>loading project</p>-->
-<!--</div>-->
-<!--<div class="overlay2"></div>-->
-<!--<div class="overlay"></div>-->
+<div class="preloader">
+    <div class="line_loader"></div>
+    <p>loading</p>
+</div>
+<div class="overlay2"></div>
+<div class="overlay"></div>
 <!-- end of preloader -->
 
 <!-- begin of main wrapper -->
@@ -107,21 +108,9 @@
                                 adipisicing elit. Nam ipsum quis, cumque tenetur incidunt perferendis architecto. Ipsam
                                 tempora fugit quae nesciunt dignissimo.</p>
                         </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h5>Services</h5>
-                                <p>UI Design</p>
-                                <p>Mobile App Dev</p>
-                            </div>
-                            <div class="col-md-6">
-                                <h5>Client</h5>
-                                <p>UI Design</p>
-                                <p>Mobile App Dev</p>
-                            </div>
-                        </div>
                     </div>
                     <div class="col-lg-6 col-md-12">
-                        <h5 class="mb-3">The Solution</h5>
+                        <h5 class="mb-3">What I did</h5>
                         <div class="single_blog_details mb-3">
                             <p class="blog_text_head">Crusadersterling ipsum dolor sit amet consectetur adipisicing
                                 elit. Itaque est
@@ -130,6 +119,37 @@
                                 adipisicing elit. Nam ipsum quis, cumque tenetur incidunt perferendis architecto. Ipsam
                                 tempora fugit quae nesciunt dignissimo.</p>
                         </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center mt-4">
+                    <div class="col-lg-6 col-md-12">
+                        <div class="row mb-3">
+                            <div class="col-md-3">
+                                <h5>Services</h5>
+                                <p>UI Design</p>
+                                <p>Mobile App Dev</p>
+                            </div>
+                            <div class="col-md-3">
+                                <h5>Client</h5>
+                                <p>UI Design</p>
+                                <p>Mobile App Dev</p>
+                            </div>
+                            <div class="col-md-6">
+                                <h5>Team Members</h5>
+                                <p>Endurance Ekhoragbon <a href="http://www.eddieos.me/" target="_blank"><span class="mbri-link"></span></a><br>
+                                    <small>
+                                        (U.I/U.X Developer)
+                                    </small>
+                                </p>
+                                <p>Theophilus Omoregbee <a href="https://www.linkedin.com/in/theophilus-omoregbee-4775ab53/" target="_blank"><span class="mbri-link"></span></a><br>
+                                    <small>
+                                        (Full Stack Developer)
+                                    </small>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12">
                         <div class="row">
                             <div class="col-md-6">
                                 <h5>Platform</h5>
