styles: ligare web project added

--- a/projects/ligare_web.html
+++ b/projects/ligare_web.html
@@ -40,12 +40,12 @@
 
 <body class="project">
 <!-- begin of preloader -->
-<!--<div class="preloader">-->
-<!--<div class="line_loader"></div>-->
-<!--<p>loading</p>-->
-<!--</div>-->
-<!--<div class="overlay2"></div>-->
-<!--<div class="overlay"></div>-->
+<div class="preloader">
+    <div class="line_loader"></div>
+    <p>loading</p>
+</div>
+<div class="overlay2"></div>
+<div class="overlay"></div>
 <!-- end of preloader -->
 
 <!-- begin of main wrapper -->
@@ -101,22 +101,17 @@
                     <div class="col-lg-6 col-md-12">
                         <h5 class="mb-3">The Problem</h5>
                         <div class="single_blog_details mb-3">
-                            <p class="blog_text_head">Crusadersterling was in need of an <strong>Hybrid Mobile
-                                Application</strong> to
-                                serve their iOS and Android customers a good pension experience. There was an existing
-                                software working on just the Android platform, so there was a need to build a new app
-                                that supports both iOS
+                            <p class="blog_text_head">DevCenter is a community in Nigeria that offers good connections
+                                between designer/developers and clients. DevCenter needed an official website for Ligare
+                                and had done the User Interface Design.
                             </p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12">
                         <h5 class="mb-3">What I did</h5>
                         <div class="single_blog_details mb-3">
-                            <p class="blog_text_head">Worked with the business and development team in visualizing how
-                                the
-                                application should best work for customers. Designed wireframes and based on the user
-                                stories provided by the business team. After approved wireframes, I joined the dev team
-                                in building the interface of the mobile app using Ionic Framework. </p>
+                            <p class="blog_text_head">Developed the interface provided by the designer pixel for pixel.
+                                Responsive web design, writing codes to support a wide range of screen sizes.</p>
                         </div>
                     </div>
                 </div>
@@ -182,7 +177,8 @@
                     </div>
 
                     <div class="col-lg-6 col-md-6 mb-4 text-center">
-                        <p>Created wireframe based on Client request on how the mobile application should function</p>
+                        <p>Developed page interface pixel for pixel based on DevCenter's company <span
+                                class="text-nowrap">User Interface Designs.</span> using Angular, HTML and CSS/SCSS</p>
 
                     </div>
 
