styles: project previews added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Designer, Porfolio, Developer, Desingineer, HTML/CSS Specialist, PSD to HTML">
     <meta name="author" content="eddieos">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta meta name="viewport" content="width=device-width, user-scalable=no" />
+    <meta meta name="viewport" content="width=device-width, user-scalable=no"/>
 
     <!-- favicon -->
     <link rel="icon" type="image/png" href="img/favicon-eddieos.png"/>
@@ -398,22 +398,23 @@
                     </div>
                     <div class="row work_items zoom-gallery">
                         <!-- work single item -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 design">
+                        <div class="col-lg-4 col-md-6 col-sm-6 develop">
                             <div class="work_single_item">
                                 <div class="work_image">
-                                    <a class="zoom_image" href="img/work_01.jpg">
-                                        <img class="img-fluid" src="img/work_01.jpg" alt="">
+                                    <a class="" href="img/work_01.jpg">
+                                        <img class="img-fluid" src="img/projects/ligare-dashboard/ligare-webapp.png" alt="">
                                     </a>
                                 </div>
                                 <div class="work_item_info">
-                                    <h4>Black Wall</h4>
-                                    <p>design</p>
+                                    <h4>Ligare <br>
+                                        Web Application</h4>
+                                    <p>U.I Development</p>
                                 </div>
                             </div>
                         </div>
 
                         <!-- work single item -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 develop">
+                        <div class="col-lg-4 col-md-6 col-sm-6 develop research">
                             <div class="work_single_item">
                                 <div class="work_image">
                                     <a class="" href="projects/crusader_sterling.html">
@@ -424,7 +425,23 @@
                                 <div class="work_item_info">
                                     <h4>Crusader Sterling <br>
                                         Pension Mobile</h4>
-                                    <p>Research and development</p>
+                                    <p>U.X Design and development</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- work single item -->
+                        <div class="col-lg-4 col-md-6 col-sm-6 develop">
+                            <div class="work_single_item">
+                                <div class="work_image">
+                                    <a class="" href="img/projects/niluk/niluk-preview.png">
+                                        <img class="img-fluid" src="img/projects/niluk/niluk-preview.png"
+                                             alt="">
+                                    </a>
+                                </div>
+                                <div class="work_item_info">
+                                    <h4>Niluk</h4>
+                                    <p>U.I development</p>
                                 </div>
                             </div>
                         </div>
@@ -445,61 +462,49 @@
                         </div>
 
                         <!-- work single item -->
+                        <div class="col-lg-4 col-md-6 col-sm-6 design research">
+                            <div class="work_single_item">
+                                <div class="work_image">
+                                    <a class="" href="img/work_01.jpg">
+                                        <img class="img-fluid" src="img/projects/pallamax/pallamax-preview.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="work_item_info">
+                                    <h4>Pallamax <br>
+                                        Inventory System</h4>
+                                    <p>U.I/U.X Design</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- work single item -->
                         <div class="col-lg-4 col-md-6 col-sm-6 develop">
                             <div class="work_single_item">
                                 <div class="work_image">
                                     <a class="" href="projects/ligare_web.html">
-                                        <img class="img-fluid" src="img/projects/ligare-web/ligare-web-preview.jpg" alt="">
+                                        <img class="img-fluid" src="img/projects/ligare-web/ligare-web-preview.jpg"
+                                             alt="">
                                     </a>
                                 </div>
                                 <div class="work_item_info">
                                     <h4>Ligare <br>Official Website</h4>
-                                    <p>development</p>
+                                    <p>U.I development</p>
                                 </div>
                             </div>
                         </div>
 
                         <!-- work single item -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 develop">
+                        <div class="col-lg-4 col-md-6 col-sm-6 research design">
                             <div class="work_single_item">
                                 <div class="work_image">
-                                    <a class="zoom_image" href="img/work_06.jpg">
-                                        <img class="img-fluid" src="img/work_06.jpg" alt="">
+                                    <a class="" href="projects/ojirehprime.html">
+                                        <img class="img-fluid" src="img/projects/ojirehprime/ojirehprime-preview.png"
+                                             alt="">
                                     </a>
                                 </div>
                                 <div class="work_item_info">
-                                    <h4>Tree Holder</h4>
-                                    <p>development</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- work single item -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 design">
-                            <div class="work_single_item">
-                                <div class="work_image">
-                                    <a class="zoom_image" href="img/work_05.jpg">
-                                        <img class="img-fluid" src="img/work_05.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="work_item_info">
-                                    <h4>BayCycle</h4>
-                                    <p>design</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- work single item -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 research">
-                            <div class="work_single_item">
-                                <div class="work_image">
-                                    <a class="zoom_image" href="img/work_07.jpg">
-                                        <img class="img-fluid" src="img/work_07.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="work_item_info">
-                                    <h4>Green Leaf</h4>
-                                    <p>research</p>
+                                    <h4>OjirehPrime</h4>
+                                    <p>U.I/U.X Design</p>
                                 </div>
                             </div>
                         </div>
