styles: homepage works updated

--- a/index.html
+++ b/index.html
@@ -447,16 +447,16 @@
                         </div>
 
                         <!-- work single item -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 research">
+                        <div class="col-lg-4 col-md-6 col-sm-6 develop research">
                             <div class="work_single_item">
                                 <div class="work_image">
-                                    <a class="zoom_image" href="img/work_03.jpg">
-                                        <img class="img-fluid" src="img/work_03.jpg" alt="">
+                                    <a class="zoom_image" href="img/projects/glosscare/glosscare-preview.png">
+                                        <img class="img-fluid" src="img/projects/glosscare/glosscare-preview.png" alt="">
                                     </a>
                                 </div>
                                 <div class="work_item_info">
-                                    <h4>Dark Room</h4>
-                                    <p>research</p>
+                                    <h4>Glosscare+</h4>
+                                    <p>U.X Design and development</p>
                                 </div>
                             </div>
                         </div>
@@ -470,7 +470,7 @@
                                     </a>
                                 </div>
                                 <div class="work_item_info">
-                                    <h4>Pallamax <br>
+                                    <h4>Pallmax <br>
                                         Inventory System</h4>
                                     <p>U.I/U.X Design</p>
                                 </div>
@@ -510,16 +510,16 @@
                         </div>
 
                         <!-- work single item -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 research">
+                        <div class="col-lg-4 col-md-6 col-sm-6 research develop design">
                             <div class="work_single_item">
                                 <div class="work_image">
                                     <a class="zoom_image" href="img/work_08.jpg">
-                                        <img class="img-fluid" src="img/work_08.jpg" alt="">
+                                        <img class="img-fluid" src="img/projects/mentions/mentions-preview.png" alt="">
                                     </a>
                                 </div>
                                 <div class="work_item_info">
-                                    <h4>Circle Window</h4>
-                                    <p>research and design</p>
+                                    <h4>Honourable <br> Mentions</h4>
+                                    <p>U.I/U.X Research and design</p>
                                 </div>
                             </div>
                         </div>
@@ -529,11 +529,11 @@
                             <div class="work_single_item">
                                 <div class="work_image">
                                     <a class="zoom_image" href="img/work_09.jpg">
-                                        <img class="img-fluid" src="img/work_09.jpg" alt="">
+                                        <img class="img-fluid" src="img/projects/emoco/emoco-preview.png" alt="">
                                     </a>
                                 </div>
                                 <div class="work_item_info">
-                                    <h4>Building &amp; Sky</h4>
+                                    <h4>Emoco <br> Portfolio Site</h4>
                                     <p>design</p>
                                 </div>
                             </div>
