--- a/projects/project_template.html
+++ b/projects/project_template.html
@@ -84,8 +84,8 @@
         </div>
         <!-- end of intro wrapper -->
 
-        <!-- begin of blogs wrapper -->
-        <div id="qrop_blogs" class="qrop_blogs section_single_padding">
+        <!-- begin of project wrapper -->
+        <div class="qrop_blogs section_single_padding">
             <div class="single_blog_details">
                 <div class="container">
                     <div class="row justify-content-center">
