--- a/projects/ligare_web.html
+++ b/projects/ligare_web.html
@@ -85,8 +85,8 @@
     </div>
     <!-- end of intro wrapper -->
 
-    <!-- begin of blogs wrapper -->
-    <div id="qrop_blogs" class="qrop_blogs section_single_padding">
+    <!-- begin of project wrapper -->
+    <div class="qrop_blogs section_single_padding">
         <div class="single_blog_details">
             <img class="blog_single_img img-fluid w-100" src="../img/projects/ligare-web/intro-ligare-web.jpg" alt="">
 
