styles: project pallmax added to page

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-6 design research">
                             <div class="work_single_item">
                                 <div class="work_image">
-                                    <a class="" href="img/work_01.jpg">
+                                    <a class="" href="projects/pallmax.html">
                                         <img class="img-fluid" src="img/projects/pallamax/pallamax-preview.png" alt="">
                                     </a>
                                 </div>
